src/test/deca/context/invalid/appel_methode_sur_null.deca
// Description :
// Appel d'une methode sur la valeur null comme acces attribut 

// Resultats :
// Echec

{
    null.tirer();
}
